istio/external-service.yaml
# #
# # http
# # 
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: ifconfig-co-http
# spec:
#   hosts:
#   - ifconfig.co
#   ports:
#   - number: 80
#     name: http
#     protocol: HTTP
#   resolution: DNS
#   location: MESH_EXTERNAL
# ---
# #
# # https
# # 
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: ifconfig-co-https
# spec:
#   hosts:
#   - ifconfig.co
#   ports:
#   - number: 443
#     name: https
#     protocol: HTTPS
#   resolution: DNS
#   location: MESH_EXTERNAL
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: ifconfig-co
# spec:
#   hosts:
#   - ifconfig.co
#   tls:
#   - match:
#     - port: 443
#       sni_hosts:
#       - ifconfig.co
#     route:
#     - destination:
#         host: ifconfig.co
#         port:
#           number: 443
#       weight: 100


# ifconfig-external-access.yaml
---
# HTTP ServiceEntry
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: ifconfig-http
  labels:
    app: ifconfig
spec:
  hosts:
  - ifconfig.co
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
---
# HTTPS ServiceEntry
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: ifconfig-https
  labels:
    app: ifconfig
spec:
  hosts:
  - ifconfig.co
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
# Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ifconfig-gateway
  labels:
    app: ifconfig
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "ifconfig.co"
  - port:
      number: 443
      name: https
      protocol: TLS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "ifconfig.co"
---
# VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ifconfig
  labels:
    app: ifconfig
spec:
  hosts:
  - "ifconfig.co"
  gateways:
  - ifconfig-gateway
  http:
  - route:
    - destination:
        host: ifconfig.co
        port:
          number: 80
  tls:
  - match:
    - port: 443
      sniHosts:
      - ifconfig.co
    route:
    - destination:
        host: ifconfig.co
        port:
          number: 443


# http
# curl -v -H "Host: ifconfig.co" https://minikube.jmlim-cluster.com:32483

# https
# url -v -k --resolve ifconfig.co:32483:192.168.49.2 https://ifconfig.co:32483
